@@ -18,6 +18,7 @@ Changelog
  * Fix: Prevent error when comparing pages that reference a model with a custom primary key (Fidel Ramos)
  * Fix: Moved ``get_document_model`` location so it can be imported when Models are not yet loaded (Andrey Smirnov)
  * Fix: Fixed incorrect HTML escaping of Jinja2 form templates for StructBlocks (Brady Moe)
+ * Fix: All templates with wagtailsettings and modeladmin now use ``block.super`` for ``extra_js`` & ``extra_css`` (Timothy Bautista)
 
 2.7 LTS (06.11.2019)
 ~~~~~~~~~~~~~~~~~~~~
